Adjust z-index for nav-tabs in _cards.scss to prevent dropdown overlap

--- a/core/scss/ui/_cards.scss
+++ b/core/scss/ui/_cards.scss
@@ -576,7 +576,7 @@ Card list group
 .card-tabs {
   .nav-tabs {
     position: relative;
-    z-index: $zindex-dropdown;
+    z-index: $zindex-dropdown - 1;
     border-bottom: 0;
 
     .nav-link {
